--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Inter:wght@400;900&family=Kumbh+Sans:wght@400;700&family=Oswald:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/style.css" />
-    <link rel="stylesheet" href="./CSS/header.css" />
-    <link rel="stylesheet" href="./CSS/navigation.css" />
-    <link rel="stylesheet" href="./CSS/idioma.css" />
-    <link rel="stylesheet" href="./CSS/main.css" />
-    <link rel="stylesheet" href="./CSS/footer.css" />
+    <link rel="stylesheet" href="./Assets/CSS/style.css" />
+    <link rel="stylesheet" href="./Assets/CSS/header.css" />
+    <link rel="stylesheet" href="./Assets/CSS/navigation.css" />
+    <link rel="stylesheet" href="./Assets/CSS/idioma.css" />
+    <link rel="stylesheet" href="./Assets/CSS/main.css" />
+    <link rel="stylesheet" href="./Assets/CSS/footer.css" />
     <title>Teste ideia 2001</title>
   </head>
   <body>
@@ -24,12 +24,12 @@
           <p>Idioma:</p>
           <img
             class="bandBrasil"
-            src="../Assets/Images/brasil.png"
+            src="./Assets/Images/brasil.png"
             alt="bandeira do Brasil"
           />
           <img
             class="arrowDrop"
-            src="../Assets/Images/icone-dropdown.png"
+            src="./Assets/Images/icone-dropdown.png"
             alt=""
           />
         </button>
@@ -55,24 +55,24 @@
       <section class="Conteudo">
         <img
           class="logo"
-          src="../Assets/Images/logo-ideia.svg"
+          src="./Assets/Images/logo-ideia.svg"
           alt="Logo da Empresa Ideia-Brasil"
         />
         <button id="btnFirst">
-          <img src="../Assets/Images/icone-searchbox.png" alt="lupa" />
+          <img src="./Assets/Images/icone-searchbox.png" alt="lupa" />
           <h3>Pesquisar Produtos</h3>
         </button>
         <button>
-          <img src="../Assets/Images/icone-flag-lancamento.png" alt="" />
+          <img src="./Assets/Images/icone-flag-lancamento.png" alt="" />
           <h3>Lançamento</h3>
         </button>
         <button>
-          <img src="../Assets/Images/carrinho.png" alt="" />
+          <img src="./Assets/Images/carrinho.png" alt="" />
           <h3>Carrinnho</h3>
         </button>
         <a href="./contato.html"
           ><button>
-            <img src="../Assets/Images/contato.png" alt="" />
+            <img src="./Assets/Images/contato.png" alt="" />
             <h3>Contato</h3>
           </button>
         </a>
@@ -82,13 +82,13 @@
     <footer>
       <div class="rodape">
         <a href="https://ideia2001.com.br">
-          <img src="../Assets/Images/icoSite.png" alt="Icone do Site"
+          <img src="./Assets/Images/icoSite.png" alt="Icone do Site"
         /></a>
         <a href="https://www.facebook.com/Ideia2001"
-          ><img src="../Assets/Images/icoFacebook.png" alt="Icone Facebook"
+          ><img src="./Assets/Images/icoFacebook.png" alt="Icone Facebook"
         /></a>
         <a href="https://www.instagram.com/ideia2001">
-          <img src="../Assets/Images/icoInstagram.png" alt="Icone instagram" />
+          <img src="./Assets/Images/icoInstagram.png" alt="Icone instagram" />
         </a>
       </div>
     </footer>
