--- a/contato.html
+++ b/contato.html
@@ -7,8 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Inter:wght@400;900&family=Kumbh+Sans:wght@400;700&family=Oswald:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/header.css" />
-    <link rel="stylesheet" href="./CSS/navigation.css" />
+    <link rel="stylesheet" href="./Assets/CSS/header.css" />
+    <link rel="stylesheet" href="./Assets/CSS/navigation.css" />
     <title>Teste ideia 2001</title>
   </head>
   <body>
