--- a/contato.html
+++ b/contato.html
@@ -17,21 +17,17 @@
         <a href="index.html">
           <img
             class="voltar"
-            src="../Assets/Images/icone-header-voltar.png"
+            src="./Assets/Images/icone-header-voltar.png"
             alt=""
           />
         </a>
 
         <a href="index.html">
-          <img
-            class="logHeader"
-            src="../Assets/Images/logo-header.png"
-            alt=""
-          />
+          <img class="logHeader" src="./Assets/Images/logo-header.png" alt="" />
         </a>
 
         <button id="cart">
-          <img class="carrinho" src="../Assets/Images/carrinho.png" alt="" />
+          <img class="carrinho" src="./Assets/Images/carrinho.png" alt="" />
           <label id="cartQtde">1</label>
         </button>
         <nav role="navigation">
