--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="./Assets/CSS/header.css" />
     <link rel="stylesheet" href="./Assets/CSS/navigation.css" />
+    <link rel="stylesheet" href="./Assets/CSS/contato.css" />
     <title>Teste ideia 2001</title>
   </head>
   <body>
@@ -26,26 +27,70 @@
           <img class="logHeader" src="./Assets/Images/logo-header.png" alt="" />
         </a>
 
-        <button id="cart">
-          <img class="carrinho" src="./Assets/Images/carrinho.png" alt="" />
-          <label id="cartQtde">1</label>
-        </button>
-        <nav role="navigation">
-          <div id="menuToggle">
-            <input type="checkbox" />
-            <span></span>
-            <span></span>
-            <span></span>
-            <ul id="menuT">
-              <a href="#"><li></li></a>
-              <a href="#"><li></li></a>
-              <a href="#"><li></li></a>
-              <a href="#"><li></li></a>
-              <a href="#"><li></li></a>
-            </ul>
-          </div>
-        </nav>
+        <section class="menuBtns">
+          <button id="cart">
+            <img class="carrinho" src="./Assets/Images/carrinho.png" alt="" />
+            <label id="cartQtde">1</label>
+          </button>
+          <nav role="navigation">
+            <div id="menuToggle">
+              <input type="checkbox" />
+              <span></span>
+              <span></span>
+              <span></span>
+              <ul id="menuT">
+                <a href="#"><li></li></a>
+                <a href="#"><li></li></a>
+                <a href="#"><li></li></a>
+                <a href="#"><li></li></a>
+                <a href="#"><li></li></a>
+              </ul>
+            </div>
+          </nav>
+        </section>
       </section>
     </header>
+    <main>
+      <div class="contatoBox">
+        <ul>
+          <h3>Contato</h3>
+        </ul>
+        <ul class="infoContat">
+          <li>
+            <img src="./Assets/Images/VectorLocal.png" alt="" />
+            Rua Amazonas, 363 - Sala 95 São Caetano do Sul - SP - Brasil
+          </li>
+          <li>
+            <img src="./Assets/Images/VectorFone.png" alt="" />
+            +55 11 2917-5277
+          </li>
+          <li>
+            <img src="./Assets/Images/VectorSite.png" alt="" />
+            www.ideia2001.com.br
+          </li>
+          <li>
+            <img src="./Assets/Images/VectorMAIL.png" alt="" />
+            contato@ideia2001.com.br
+          </li>
+        </ul>
+        <ul class="icones">
+          <li>
+            <img src="./Assets/Images/VectorFace.png" alt="" />
+          </li>
+          <li>
+            <img src="./Assets/Images/icone-contato-whatsapp.png" alt="" />
+          </li>
+          <li>
+            <img src="./Assets/Images/Instagram.svg" alt="" />
+          </li>
+          <li>
+            <img src="./Assets/Images/VectorLinkedIn.png" alt="" />
+          </li>
+          <li>
+            <img src="./Assets/Images/VectorYoutube.png" alt="" />
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
