Update Contact Footer

--- a/contato.html
+++ b/contato.html
@@ -58,7 +58,7 @@
         <ul class="infoContat">
           <li>
             <img src="./Assets/Images/VectorLocal.png" alt="" />
-            Rua Amazonas, 363 - Sala 95 São Caetano do Sul - SP - Brasil
+            Rua Amazonas, 363 - Sala 95 <br />São Caetano do Sul - SP - Brasil
           </li>
           <li>
             <img src="./Assets/Images/VectorFone.png" alt="" />
@@ -92,5 +92,6 @@
         </ul>
       </div>
     </main>
+    <footer><p>Fale Conosco</p></footer>
   </body>
 </html>
