--- a/contato.html
+++ b/contato.html
@@ -57,19 +57,19 @@
         </ul>
         <ul class="infoContat">
           <li>
-            <img src="./Assets/Images/VectorLocal.png" alt="" />
+            <img class="VeLocal" src="./Assets/Images/VectorLocal.png" alt="" />
             Rua Amazonas, 363 - Sala 95 <br />São Caetano do Sul - SP - Brasil
           </li>
           <li>
-            <img src="./Assets/Images/VectorFone.png" alt="" />
+            <img class="VeFone" src="./Assets/Images/VectorFone.png" alt="" />
             +55 11 2917-5277
           </li>
           <li>
-            <img src="./Assets/Images/VectorSite.png" alt="" />
+            <img class="VeSite" src="./Assets/Images/VectorSite.png" alt="" />
             www.ideia2001.com.br
           </li>
           <li>
-            <img src="./Assets/Images/VectorMAIL.png" alt="" />
+            <img class="VeMail" src="./Assets/Images/VectorMAIL.png" alt="" />
             contato@ideia2001.com.br
           </li>
         </ul>
