--- a/index.html
+++ b/index.html
@@ -58,24 +58,32 @@
           src="./Assets/Images/logo-ideia.svg"
           alt="Logo da Empresa Ideia-Brasil"
         />
-        <button id="btnFirst">
-          <img src="./Assets/Images/icone-searchbox.png" alt="lupa" />
-          <h3>Pesquisar Produtos</h3>
-        </button>
-        <button>
-          <img src="./Assets/Images/icone-flag-lancamento.png" alt="" />
-          <h3>Lançamento</h3>
-        </button>
-        <button>
-          <img src="./Assets/Images/carrinho.png" alt="" />
-          <h3>Carrinnho</h3>
-        </button>
-        <a href="./contato.html"
-          ><button>
-            <img src="./Assets/Images/contato.png" alt="" />
-            <h3>Contato</h3>
+        <div class="menuBtn">
+          <button id="btnFirst">
+            <img
+              class="btnImg"
+              src="./Assets/Images/icone-searchbox.png"
+              alt="lupa"
+            />
+            <h3>Pesquisar Produtos</h3>
           </button>
-        </a>
+          <button>
+            <img
+              class="btnImg"
+              src="./Assets/Images/icone-flag-lancamento.png"
+              alt=""
+            />
+            <h3>Lançamento</h3>
+          </button>
+          <button>
+            <img class="btnImg" src="./Assets/Images/carrinho.png" alt="" />
+            <h3>Carrinnho</h3>
+          </button>
+          <button>
+            <img class="btnImg" src="./Assets/Images/contato.png" alt="" />
+            <a href="./contato.html"><h3>Contato</h3></a>
+          </button>
+        </div>
       </section>
     </main>
 
